--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "texipy"
-version = "0.1.0"
+version = "0.1.0a0"
 description = ""
 authors = ["pbk ns <praveenneuron@gmail.com>"]
 readme = "README.md"
